@@ -1,5 +1,5 @@
 /* 
-   rmcp.h - remote management control protocol definitions
+   rmcp-interface.h - remote management control protocol interface
 
    Copyright (C) 2003, 2004, 2005 FreeIPMI Core Team
 
@@ -20,8 +20,8 @@
 */
 
 
-#ifndef _RMCP_H
-#define	_RMCP_H	1
+#ifndef _RMCP_INTERFACE_H
+#define	_RMCP_INTERFACE_H	1
 
 #ifdef __cplusplus
 extern "C" {
@@ -60,21 +60,12 @@ extern "C" {
 #define RMCP_ASF_MESSAGE_TAG_MAX 0xFE
 
 extern fiid_template_t tmpl_rmcp_hdr;
-extern fiid_template_t tmpl_cmd_asf_presence_ping;
-extern fiid_template_t tmpl_cmd_asf_presence_pong;
 
 int8_t fill_rmcp_hdr (uint8_t message_class, fiid_obj_t obj_rmcp_hdr);
 
 int8_t fill_rmcp_hdr_ipmi (fiid_obj_t obj_rmcp_hdr);
 
 int8_t fill_rmcp_hdr_asf (fiid_obj_t obj_rmcp_hdr);
-
-/* MESSAGE_TAG:
-   achu: Consecutive ping messages should use different message tags,
-   ranging from 0x00 to 0xFE.  This is because the RMCP consumers may
-   optionally discard duplicate messages.  */
-
-int8_t fill_cmd_asf_presence_ping(uint8_t message_tag, fiid_obj_t obj_cmd);
 
 int32_t assemble_rmcp_pkt (fiid_obj_t obj_rmcp_hdr, fiid_obj_t obj_cmd, uint8_t *pkt, uint32_t pkt_len);
 
@@ -84,4 +75,4 @@ int32_t unassemble_rmcp_pkt (void *pkt, uint32_t pkt_len, fiid_obj_t obj_rmcp_hd
 }
 #endif
 
-#endif /* rmcp.h */
+#endif /* rmcp-interface.h */
