@@ -34,7 +34,7 @@
 #include <errno.h>
 
 #include "freeipmi/ipmi-debug.h"
-#include "freeipmi/rmcp.h"
+#include "freeipmi/rmcp-interface.h"
 
 #include "ipmi-debug-common.h"
 
