@@ -38,7 +38,7 @@
 #include "freeipmi/ipmi-netfn-spec.h"
 #include "freeipmi/ipmi-slave-address-spec.h"
 #include "freeipmi/ipmi-utils.h"
-#include "freeipmi/rmcp.h"
+#include "freeipmi/rmcp-interface.h"
 
 #include "err-wrappers.h"
 #include "fiid-wrappers.h"
