@@ -36,7 +36,7 @@
 #include "freeipmi/ipmi-messaging-support-cmds.h"
 #include "freeipmi/ipmi-netfn-spec.h"
 #include "freeipmi/ipmi-utils.h"
-#include "freeipmi/rmcp.h"
+#include "freeipmi/rmcp-interface.h"
 
 #include "err-wrappers.h"
 #include "fiid-wrappers.h"
